kubernetes/apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: mealie-ui
      port: 9000
      targetPort: 9000
  type: ClusterIP
