kubernetes/apps/mealie/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.poolnode.net`)
      kind: Rule
      services:
        - name: mealie-service
          kind: Service
          namespace: mealie
          scheme: http
          port: 9000
  tls:
    secretName: poolnode-wildcard-tls
